<resources>
    <string name="app_name">Pokemon App</string>

    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_settings">Settings</string>
    <string name="title_detail">Pokemon Detail</string>
    <string name="action_add_to_favorite">Add to Favorite</string>
    <string name="action_remove_from_favorite">Remove from Favorite</string>
    <string name="type">Type</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="abilities">Abilities</string>
    <string name="evolutions">Evolutions</string>
    <string name="message_enable_crash_reporting">Note: Crash reporting change will take effect after app restart.</string>
    <string name="enable_crash_reporting">Enable Crash Reporting?</string>
    <string name="message_favorite_empty">You have no favorite Pokemon yet</string>
    <string name="message_list_empty">Failed loading Pokemon list</string>
    <string name="action_retry">Retry</string>
</resources>