<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/listFragment">

    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.hanmajid.android.pokemonapp.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />
    <fragment
        android:id="@+id/listFragment"
        android:name="com.hanmajid.android.pokemonapp.ui.list.ListFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_list" />
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.hanmajid.android.pokemonapp.ui.detail.DetailFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_detail" >
        <argument
            android:name="pokemonId"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.hanmajid.android.pokemonapp.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <action android:id="@+id/action_global_detailFragment" app:destination="@id/detailFragment" />
</navigation>