<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.detail.DetailFragment">

    <data>

        <variable
            name="viewModel"
            type="com.hanmajid.android.pokemonapp.ui.detail.DetailViewModel" />
    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:onRefreshListener="@{() -> viewModel.refresh()}"
        app:refreshing="@{viewModel.isLoading}">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:contentDescription="@{viewModel.pokemon.nameFormatted}"
                        android:scaleType="fitCenter"
                        app:imageUrl="@{viewModel.pokemonOfficialArtwork}"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:src="@tools:sample/backgrounds/scenic" />

                    <Button
                        android:id="@+id/button_add_favorite"
                        style="@style/TextButton.IconOnly"
                        hidden="@{viewModel.pokemon.favorite || viewModel.pokemon == null}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{() -> viewModel.addPokemonToFavorite(viewModel.pokemonId)}"
                        app:icon="@drawable/ic_baseline_favorite_border_24"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tooltipTextCompat="@{@string/action_add_to_favorite}" />

                    <Button
                        android:id="@+id/button_remove_favorite"
                        style="@style/TextButton.IconOnly"
                        hidden="@{!viewModel.pokemon.favorite || viewModel.pokemon == null}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{() -> viewModel.removePokemonFromFavorite(viewModel.pokemonId)}"
                        app:icon="@drawable/ic_baseline_favorite_24"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tooltipTextCompat="@{@string/action_remove_from_favorite}"
                        tools:visibility="gone" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/TextAppearance.MaterialComponents.Headline5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{viewModel.pokemonIdFormatted}"
                            android:textColor="@color/material_on_background_emphasis_medium"
                            tools:text="#001" />

                        <TextView
                            style="@style/TextAppearance.MaterialComponents.Headline5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@{viewModel.pokemon.nameFormatted}"
                            android:textStyle="bold"
                            tools:text="Bulbasaur" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/type" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_view_types"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:itemCount="1"
                        tools:listitem="@layout/item_pokemon_type" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                style="@style/TextAppearance.MaterialComponents.Caption"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/weight" />

                            <TextView
                                style="@style/TextAppearance.MaterialComponents.Body2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{viewModel.pokemon.weightFormatted}"
                                tools:text="69 hg" />

                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                style="@style/TextAppearance.MaterialComponents.Caption"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/height" />

                            <TextView
                                style="@style/TextAppearance.MaterialComponents.Body2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{viewModel.pokemon.heightFormatted}"
                                tools:text="69 hg" />

                        </androidx.appcompat.widget.LinearLayoutCompat>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/abilities" />

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Body2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.pokemon.abilitiesFormatted}"
                        tools:text="Overgrow" />

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/evolutions" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_view_evolutions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:overScrollMode="never"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:itemCount="1"
                        tools:listitem="@layout/item_pokemon_evolution" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</layout>